fix: removed get method for export
